syntax = "proto3";
package canine_chain.oracle;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "canine_chain/oracle/params.proto";
import "canine_chain/oracle/feed.proto";

option go_package = "github.com/jackalLabs/canine-chain/x/oracle/types";

service Query {
  rpc Params(QueryParams) returns (QueryParamsResponse) {
    option (google.api.http).get = "/jackal/canine-chain/oracle/params";
  }

  // Queries a Feed by name.
  rpc Feed(QueryFeed) returns (QueryFeedResponse) {
    option (google.api.http).get = "/jackal/canine-chain/oracle/feeds/{name}";
  }

  // Queries a list of Feed items.
  rpc AllFeeds(QueryAllFeeds) returns (QueryAllFeedsResponse) {
    option (google.api.http).get = "/jackal/canine-chain/oracle/feeds";
  }
}

message QueryParams {}

message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryFeed {
  string name = 1;
}

message QueryFeedResponse {
  Feed feed = 1 [ (gogoproto.nullable) = false ];
}

message QueryAllFeeds {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllFeedsResponse {
  repeated Feed feed = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
